--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,13 @@
     transform: rotate(360deg);
   }
 }
+.photo-container{
+  color: '#2B3A55';
+  padding: '8px';
+  border: '2px solid #6D67E4';
+  margin: '10px'; 
+  border-radius: '20px';
+}
+.photo img{
+  width: 200px;
+}
